--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.0",
+        "bootstrap": "^5.3.2",
         "compression": "^1.7.4",
         "cypress": "^9.7.0",
         "detect-port": "^1.3.0",
