--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "jest-environment-jsdom": "^28.1.0",
         "jquery": "^3.7.1",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "nunjucks": "^3.2.3",
         "picocolors": "^1.0.0",
         "select2": "^4.1.0-rc.0",
