--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "body-parser": "^1.20.0",
         "bootstrap": "^5.3.2",
+        "cloudinary": "^1.41.0",
         "compression": "^1.7.4",
         "cypress": "^9.7.0",
         "detect-port": "^1.3.0",
