--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jquery": "^3.7.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "nunjucks": "^3.2.3",
         "picocolors": "^1.0.0",
         "select2": "^4.1.0-rc.0",
