--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "detect-port": "^1.3.0",
         "dump-die": "^1.0.0",
         "express": "^4.18.1",
+        "http": "^0.0.1-security",
         "jest-environment-jsdom": "^28.1.0",
         "jquery": "^3.7.1",
         "morgan": "^1.10.0",
@@ -38,6 +39,7 @@
         "select2": "^4.1.0-rc.0",
         "sequelize": "^6.19.0",
         "socket.io": "^4.7.2",
+        "socket.io-client": "^4.7.2",
         "sqlite3": "^5.0.8",
         "tedious": "^16.4.0"
     },
