add: librerias sweet alert 2

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "select2": "^4.1.0-rc.0",
         "sequelize": "^6.19.0",
         "sqlite3": "^5.0.8",
+        "sweetalert2": "^11.7.32",
         "tedious": "^16.4.0"
     },
     "devDependencies": {
