--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.0",
         "bcrypt-nodejs": "^0.0.3",
         "body-parser": "^1.20.0",
         "bootstrap": "^5.3.2",
         "cloudinary": "^1.41.0",
         "compression": "^1.7.4",
         "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.6",
         "cypress": "^9.7.0",
         "detect-port": "^1.3.0",
+        "dotenv": "^16.3.1",
         "dump-die": "^1.0.0",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
